--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ai": "^6.0.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^12.24.7",
     "lucide-react": "^0.468.0",
     "music-metadata-browser": "^2.5.11",
     "next": "16.1.1",
