Edits on home page

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "موسوعة قراء القرآن الكريم",
+    "name": "موسوعة القراء",
     "short_name": "موسوعة القراء",
-    "description": "موسوعة شاملة لتلاوات القرآن الكريم من أشهر القراء",
+    "description": "أرشيف موسوعة القراء - موسوعة شاملة لتلاوات القرآن الكريم",
     "start_url": "/",
     "display": "standalone",
     "background_color": "#ffffff",
