--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "cloudflare:build": "open-next build --minify",
-    "cloudflare:dev": "wrangler pages dev .open-next/worker --compatibility-flag=nodejs_compat",
-    "cloudflare:deploy": "npm run cloudflare:build && wrangler pages deploy .open-next/worker"
+    "lint": "eslint"
   },
   "dependencies": {
     "@ai-sdk/google": "^3.0.2",
@@ -24,27 +21,24 @@
     "framer-motion": "^12.24.7",
     "lucide-react": "^0.468.0",
     "music-metadata-browser": "^2.5.11",
-    "next": "15.3.8",
+    "next": "16.1.1",
     "next-pwa": "^5.6.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.2.0",
     "zod": "^4.3.4"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.3",
-    "@opennextjs/cloudflare": "^1.14.8",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv": "^17.2.3",
     "eslint": "^9",
-    "eslint-config-next": "15.3.8",
+    "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "wrangler": "^4.59.2"
+    "typescript": "^5"
   }
 }
