--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/google": "^3.0.2",
     "@ai-sdk/groq": "^3.0.2",
     "@ai-sdk/react": "^3.0.5",
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.39.0",
@@ -22,7 +23,6 @@
     "lucide-react": "^0.468.0",
     "music-metadata-browser": "^2.5.11",
     "next": "16.1.1",
-    "next-pwa": "^5.6.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
