--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@ai-sdk/google": "^3.0.2",
     "@ai-sdk/groq": "^3.0.2",
     "@ai-sdk/react": "^3.0.5",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@ducanh2912/next-pwa": "^10.2.9",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/ssr": "^0.8.0",
@@ -25,6 +28,7 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.2.0",
