--- a/package.json
+++ b/package.json
@@ -19,16 +19,20 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.39.0",
+    "@types/leaflet": "^1.9.21",
     "ai": "^6.0.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^12.24.7",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.468.0",
     "music-metadata-browser": "^2.5.11",
     "next": "16.1.1",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
+    "react-leaflet": "^5.0.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.2.0",
